@@ -170,10 +170,17 @@ define(function (require) {
      * @param {String} scene Scene's identifier
      */
     Game.prototype.setActiveScene = function (sceneId) {
-        this.trigger("exit_scene_" + this.activeScene);
+        // Exit current scene
+        if (this.activeScene !== null) {
+            this.scenes[this.activeScene].exit();
+            this.trigger("exit_scene_" + this.activeScene);
+        }
+        // Set active scene
         this.activeScene = sceneId;
         this.gui.setActiveView(sceneId);
+        // Enter current scene
         this.trigger("enter_scene_" + sceneId);
+        this.scenes[this.activeScene].enter();
     };
 
     /**
