@@ -39,6 +39,24 @@ define(function (require) {
     };
 
     /**
+     * TODO:
+     *
+     * @method enter
+     */
+    Scene.prototype.enter = function () {
+        
+    };
+
+    /**
+     * TODO:
+     *
+     * @method exit
+     */
+    Scene.prototype.exit = function () {
+        
+    };
+
+    /**
      * Add Soul for being processed by the game.
      *
      * @method addSoul
